[update]環境ファイル・マップ書き出し作成

--- a/2DMapEditor/2DMapEditor.csproj
+++ b/2DMapEditor/2DMapEditor.csproj
@@ -55,11 +55,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataIO.cs" />
     <Compile Include="MapTipEditor.xaml.cs">
       <DependentUpon>MapTipEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="StartDialog.xaml.cs">
       <DependentUpon>StartDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TabNameSelect.xaml.cs">
+      <DependentUpon>TabNameSelect.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -78,6 +82,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="StartDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TabNameSelect.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
